--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="radioactivity_image">radioactivity_image</string>
     <string name="atomic_mass">Atomic Mass</string>
     <string name="electron_configuration">Electron Configuration</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
